# briefing

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.omc/: project-memory.json
.omc/state/: agent-replay-edce70ac-e274-4b44-a6bc-3e0c78dfe165.jsonl  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
data/: stopwords.txt
docker/: entrypoint.sh
docs/superpowers/plans/: 2026-05-13-briefing-implementation.md
docs/superpowers/specs/: 2026-05-13-briefing-design.md
src/briefing/application/: admin_queries.py  ingest_article.py  publish_pending.py  replay_failed.py  sync_vault.py
src/briefing/domain/: entities.py  ports.py  results.py  value_objects.py
src/briefing/infrastructure/nlp/: kiwi_extractor.py
src/briefing/interface/: app.py  settings.py
src/briefing/worker/: background.py
tests/: test_e2e.py  test_smoke.py
tests/application/: fakes.py  test_admin_queries.py  test_fakes.py  test_ingest_article.py  test_publish_pending.py  test_replay_failed.py  test_sync_vault.py
tests/domain/: test_entities.py  test_ports.py  test_results.py  test_value_objects.py
tests/infrastructure/nlp/: test_kiwi_extractor.py
tests/infrastructure/persistence/: test_schema.py  test_sqlite_article_repo.py
tests/infrastructure/sources/: test_dooray.py  test_registry.py
tests/infrastructure/sync/: test_git_sync.py
tests/interface/: test_admin_auth.py  test_admin_routes.py  test_app.py  test_settings.py  test_webhook_routes.py
tests/worker/: test_background.py
(+19 files in other folders)
